# map-machine

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  flinger.py  icons.html  mapper.py  osm_getter.py  osm_reader.py  process.py  pyproject.toml  readme.md  requirements.txt  roentgen.py  run.py  session.vim  setup.py  tags.yml  test.py  test_main.py  ui.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: codeql-analysis.yml  test.yml  test_3.8.yml
data/: collections.json  colors.yml  dictionary.xml  pylintrc  roentgen_icons_part.mapcss  tags.yml
data/githooks/: commit-msg  pre-commit  pre-push
doc/: INSTALL.md  contributing.moi  install.moi  leaflet.html  readme.moi
doc/moi/: contributing.moi  install.moi  readme.moi
engine/: extract_icon.py  flinger.py  mapper.py  osm_getter.py  osm_reader.py  process.py  refresh_files.py  test.py  ui.py
icons/: LICENSE  config.json
map_machine/: __init__.py  __main__.py  boundary_box.py  color.py  complete.py  constructor.py  direction.py  drawing.py  element.py  figure.py  flinger.py  grid.py  icon.py  main.py  map_configuration.py  mapcss.py  mapper.py  moire_manager.py  osm_getter.py  osm_reader.py  point.py  road.py  scheme.py  server.py  taginfo.py  text.py  tile.py  ui.py  util.py  vector.py  workspace.py
map_machine/doc/: __init__.py  collections.py  doc_collections.py  draw_elements.py  icons.py  moire_manager.py  preview.py  taginfo.py  wiki.py
map_machine/element/: __init__.py  element.py  grid.py  node.py  test_elements.py  way.py
map_machine/feature/: __init__.py  building.py  crater.py  direction.py  road.py  tree.py
map_machine/geometry/: __init__.py  boundary_box.py  bounding_box.py  flinger.py  vector.py
map_machine/icons/: config.json
map_machine/osm/: __init__.py  osm_getter.py  osm_reader.py  tags.py
map_machine/pictogram/: __init__.py  icon.py  icon_collection.py  point.py
map_machine/scheme/: default.yml
map_machine/slippy/: __init__.py  server.py  tile.py
map_machine/ui/: __init__.py  cli.py  completion.py
roentgen/: __init__.py  __main__.py  address.py  boundary_box.py  color.py  constructor.py  direction.py  drawing.py  element.py  extract_icon.py  figure.py  flinger.py  grid.py  icon.py  main.py  map_configuration.py  mapcss.py  mapper.py  moire_manager.py  network.py  osm_getter.py  osm_reader.py  point.py  process.py  raster.py  road.py  scheme.py  server.py  svg.py  taginfo.py  test.py  text.py  tile.py  ui.py  util.py  vector.py  workspace.py
scheme/: default.yml
test/: __init__.py  test_boundary_box.py  test_color.py  test_direction.py  test_flinger.py  test_icons.py  test_label.py  test_mapcss.py  test_osm_reader.py  test_scale.py  test_style.py  test_tag.py  test_text.py  test_zoom_level.py
test/data/: 10.066,46.093,10.070,46.097.osm  10.067,46.093,10.070,46.096.osm  37.415,55.753,37.416,55.754.osm
tests/: __init__.py  test_boundary_box.py  test_bounding_box.py  test_color.py  test_command_line.py  test_completion.py  test_direction.py  test_elements.py  test_flinger.py  test_icons.py  test_label.py  test_mapcss.py  test_moire.py  test_osm_reader.py  test_requirements.py  test_scheme.py  test_style.py  test_tag.py  test_taginfo.py  test_text.py  test_vector.py  test_ways.py  test_zoom_level.py
tests/data/: 10.000,20.000,10.001,20.001.osm  39.999,49.999,40.002,50.002.osm  tag_tests.json
