[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "map-machine"
description = "Map Machine: Python map renderer for OpenStreetMap with custom icon set."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Sergey Vartanov", email = "me@enzet.ru" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "CairoSVG~=2.5.0",
    "colour~=0.1.5",
    "numpy~=1.26.0",
    "Pillow~=8.2.0",
    "portolan~=1.0.1",
    "PyYAML~=6.0.1",
    "Shapely~=1.7.1",
    "svgwrite~=1.4",
    "urllib3~=1.25.6",
]

[project.optional-dependencies]
dev = [
    "pytest~=7.4.0",
    "ruff~=0.14.5",
]

[project.urls]
Homepage = "https://github.com/enzet/map-machine"
"Bug Tracker" = "https://github.com/enzet/map-machine/issues"

[project.scripts]
map-machine = "map_machine.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["map_machine*"]

[tool.setuptools.package-data]
map_machine = [
    "icons/icons.svg",
    "icons/config.json",
    "icons/LICENSE",
    "scheme/default.yml",
]

[tool.setuptools.dynamic]
version = { attr = "map_machine.__version__" }

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "C901",  # Too complex functions are allowed.
    "COM812",  # Trailing comma not in Black style.
    "D105",  # Missing docstring in magic method is allowed.
    "D107",  # Missing docstring in `__init__` method is allowed.
    "D202",  # No blank line after function docstring is allowed.
    "D203",  # Blank line is not required before class docstring.
    "D213",  # New line after `"""` is not needed.
    "FIX002",  # Todo markers are allowed.
    "PLR0911",  # Too many return statements are allowed.
    "PLR0912",  # Too many branches are allowed.
    "PLR0913",  # Too many arguments are allowed.
    "PLR0915",  # Too many statements are allowed.
    "RUF001",  # Ambiguous symbols are allowed.
    "RUF002",  # Ambiguous symbols are allowed.
    "S101",  # Asserts are allowed in tests.
    "TD003",  # Issues for todos are not required.
]
line-length = 80
